k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plasseringsspillet
  namespace: plasseringsspillet
  labels:
    app: plasseringsspillet
spec:
  type: ClusterIP
  selector:
    app: plasseringsspillet
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
